// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareCount snapshots It should format long shareCount correctly 1`] = `
.emotion-6 {
  font-size: 18px;
  line-height: 18px;
  font-family: GuardianTextSans,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-weight: bold;
  color: #767676;
}

@media (min-width:1140px) {
  .emotion-6 {
    border-top: 1px solid #dcdcdc;
    width: 100%;
    padding-top: 6px;
  }
}

@media (min-width:1300px) {
  .emotion-6 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    border: 0;
    padding-top: 0;
    text-align: right;
  }
}

@media (min-width:1140px) {
  .emotion-5 {
    display: inline-block;
  }
}

.emotion-2 {
  position: relative;
  height: 15px;
  margin: 0;
}

.emotion-0 {
  position: absolute;
  top: 0;
  right: 0;
  fill: #767676;
}

.emotion-3 {
  display: block;
}

@media (min-width:1140px) and (max-width:1299px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-4 {
  display: none;
}

@media (min-width:1140px) and (max-width:1299px) {
  .emotion-4 {
    display: block;
  }
}

.emotion-1 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

<div
  className="emotion-6"
>
  <div
    className="emotion-5"
  >
    <h3
      className="emotion-2"
    >
      <SVG
        className="emotion-0"
      />
      <span
        className="emotion-1"
      >
        Shares
      </span>
    </h3>
    <div
      className="js-countFull emotion-3"
    >
      25,000
    </div>
    <div
      className="js-countShort emotion-4"
    >
      25k
    </div>
  </div>
</div>
`;

exports[`ShareCount snapshots It should not render if state.shareCount is falsy 1`] = `""`;

exports[`ShareCount snapshots It should render if state.shareCount is truthy 1`] = `
.emotion-6 {
  font-size: 18px;
  line-height: 18px;
  font-family: GuardianTextSans,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-weight: bold;
  color: #767676;
}

@media (min-width:1140px) {
  .emotion-6 {
    border-top: 1px solid #dcdcdc;
    width: 100%;
    padding-top: 6px;
  }
}

@media (min-width:1300px) {
  .emotion-6 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    border: 0;
    padding-top: 0;
    text-align: right;
  }
}

@media (min-width:1140px) {
  .emotion-5 {
    display: inline-block;
  }
}

.emotion-2 {
  position: relative;
  height: 15px;
  margin: 0;
}

.emotion-0 {
  position: absolute;
  top: 0;
  right: 0;
  fill: #767676;
}

.emotion-3 {
  display: block;
}

@media (min-width:1140px) and (max-width:1299px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-4 {
  display: none;
}

@media (min-width:1140px) and (max-width:1299px) {
  .emotion-4 {
    display: block;
  }
}

.emotion-1 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

<div
  className="emotion-6"
>
  <div
    className="emotion-5"
  >
    <h3
      className="emotion-2"
    >
      <SVG
        className="emotion-0"
      />
      <span
        className="emotion-1"
      >
        Shares
      </span>
    </h3>
    <div
      className="js-countFull emotion-3"
    >
      100
    </div>
    <div
      className="js-countShort emotion-4"
    >
      100
    </div>
  </div>
</div>
`;
